tdf#120920 Assertion failure when switching slide layouts with text entered

no need to call StartListening here, has already been done inside
SdPage::CreatePresObj

Change-Id: I590e51f7afeb336d562d3ad9ccc123f542897aae
Reviewed-on: https://gerrit.libreoffice.org/62689
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit ef9bfdfe4f4ef75ca65547face0db09af7352314)
Reviewed-on: https://gerrit.libreoffice.org/64082
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Aron Budea <aron.budea@collabora.com>